--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-}
-
-.bg-blur {
-  position: relative;
-  overflow: hidden;
-}
-
-.bg-blur::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url('../public/background.jpg');
-  background-size: cover;
-  background-position: center;
-  filter: blur(2px);
-  z-index: -1;
 }
